--- a/flutter_demo/pubspec.yaml
+++ b/flutter_demo/pubspec.yaml
@@ -16,40 +16,19 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.1.0+1
-#environment:
-#  sdk: ">=2.12.0-0 <3.0.0"
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
+#environment:
+#  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  # 日志
-  logger: ^0.9.4
-  # 模拟假数据
-  faker: ^1.3.0
-  # 清理缓存
-  flutter_cache_manager: ^2.0.0
-  #轮播
-  transformer_page_view: ^0.1.6
-  #轮播
-  flutter_swiper: 1.1.6
-  #状态管理
-  provider: ^5.0.0
+
   #动画
   animations: ^2.0.0
-  #ios icon
-  cupertino_icons: ^0.1.3
-  #翻转页面
-  page_flip_builder: ^0.1.3
-  #圆形菜单
-  circular_menu: ^1.1.2
 
 
-
-    # The following adds the Cupertino Icons font to your application.
-    # Use with the CupertinoIcons class for iOS style icons.
-    # cupertino_icons: ^0.1.3
 
 
 
